Fixed an issue where the current debug line is not visible in the 'Dark' theme. Fixes #6409

--- a/web/pgadmin/static/scss/_codemirror.overrides.scss
+++ b/web/pgadmin/static/scss/_codemirror.overrides.scss
@@ -174,7 +174,7 @@
 }
 
 .CodeMirror-activeline-background {
-  background: $color-danger-lighter !important;
+  background: $color-editor-activeline !important;
 }
 
 .CodeMirror-simplescroll-horizontal {
