--- a/web/pgadmin/static/scss/resources/dark/_theme.variables.scss
+++ b/web/pgadmin/static/scss/resources/dark/_theme.variables.scss
@@ -77,7 +77,7 @@ $color-editor-comment: #7fcc5c;
 $color-editor-bracket: #d6aaaa;
 $color-editor-operator: #d6aaaa;
 $color-editor-foldmarker: #0000FF !default;
-$color-editor-activeline: #50B0F0 !default;
+$color-editor-activeline: #323e43 !default;
 
 $explain-sev-2-bg: #ded17e;
 $explain-sev-3-bg: #824d18;
