--- a/web/pgadmin/static/scss/resources/high_contrast/_theme.variables.scss
+++ b/web/pgadmin/static/scss/resources/high_contrast/_theme.variables.scss
@@ -96,7 +96,7 @@ $color-editor-comment: #FFAD65;
 $color-editor-bracket: #D6AAAA;
 $color-editor-operator: $color-fg;
 $color-editor-foldmarker: #FFFFFF;
-$color-editor-activeline: #50B0F0;
+$color-editor-activeline: #063057;
 
 $active-color: $color-fg;
 $active-border: 3px solid $color-primary;
