--- a/web/pgadmin/tools/debugger/static/scss/_debugger.scss
+++ b/web/pgadmin/tools/debugger/static/scss/_debugger.scss
@@ -1,6 +1,3 @@
-.debugger-container .CodeMirror-activeline-background {
-  background: $color-editor-activeline;
-}
 
 /* To make font same as Query tool in messages tab */
 .messages {
