--- a/web/pgadmin/tools/sqleditor/static/scss/_sqleditor.scss
+++ b/web/pgadmin/tools/sqleditor/static/scss/_sqleditor.scss
@@ -59,10 +59,6 @@
   right: 0;
 }
 
-#editor-panel .CodeMirror-activeline-background {
-  background: $color-primary-light;
-}
-
 
 .ajs-body .warn-icon {
   color: $color-warning;
